--- a/css/ui.structure.modal.css
+++ b/css/ui.structure.modal.css
@@ -6,7 +6,6 @@
  *******************************************************************************/
 
 .ui-modal {
-	z-index:1001;
 	max-width:50%;
 	display:none;
 	position:absolute;
